# tecoroute-proxy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  notes-1.txt  notes-2.txt  setup.cfg  setup.py
chart/: Chart.yaml  README.md  README.md.gotmpl  values.yaml
chart/templates/: _helpers.tpl  healthcheckpolicy.yaml  http-deployment.yaml  http-service.yaml  httproute.yaml  ingress.yaml
docs/: conf.py  index.rst  reference.rst  requirements.txt
src/tecoroute_proxy/: __init__.py  _cli.py  _misc.py  _request.py  _server.py
tecoroute-proxy/: __about__.py  __init__.py  __main__.py  cli.py  proxy.py
