[metadata]
name = tecoroute-proxy
version = 0.5.0
url = https://opensource.cze.tech/tecoroute-proxy
project_urls =
    Source = https://github.com/czetech/tecoroute-proxy
    Tracker = https://github.com/czetech/tecoroute-proxy/issues
    Documentation = https://tecoroute-proxy.readthedocs.io/
author = Petr Czepiec
author_email = petr@czepiec.me
maintainer = Petr Czepiec
maintainer_email = petr@czepiec.me
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: AsyncIO
    Framework :: aiohttp
    Intended Audience :: Information Technology
    Intended Audience :: Manufacturing
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Home Automation
    Topic :: Internet :: Proxy Servers
    Topic :: Internet :: WWW/HTTP
    Topic :: System :: Hardware
license = MIT
license_files = LICENSE
description = Proxy for easy authentication to the TecoRoute service.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = authentication, proxy, tecoroute

[options]
zip_safe = True
install_requires =
    aiohttp~=3.8
    yarl~=1.9
python_requires = >=3.8
packages = find:
package_dir = = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    tecoroute-proxy = tecoroute_proxy:cli

[options.extras_require]
uvloop = uvloop~=0.16

[flake8]
ignore = D105, D107, E203, E501, W503
max-line-length = 80
select = B,C,D,E,F,N,W,B9
max-complexity = 13
